Added custom elements

--- a/default.hbs
+++ b/default.hbs
@@ -15,6 +15,45 @@
     <link rel="stylesheet" type="text/css" href="{{asset "main/css/main.css"}}" />
     <noscript><link rel="stylesheet" href="{{asset "main/css/noscript.css"}}" /></noscript>
 
+    <!-- =====================================================================
+    SEE below / CUSTOM ELEMENTS
+    Added by: pascalandy.com/blog/now
+    ========================================================================== -->
+
+    <!-- CSS Buttons (introduced with London Ghost Theme) -->
+    <link rel="stylesheet" type="text/css" href="{{asset "css_firepress/buttons.min.css"}}" />
+
+    <!-- CSS Grid and Tables -->
+    <link rel="stylesheet" type="text/css" href="{{asset "css_firepress/simplegrid.min.css"}}" />
+
+    <!-- CSS Icon via fontawesome 5 (bypassed, as it is static with this theme)
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/v4-shims.css">
+	  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous"> -->
+
+    <!-- CSS Code Syntax (highlight agate) -->
+    <!-- Line number is not supported > http://highlightjs.readthedocs.io/en/latest/line-numbers.html -->
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.13.1/styles/agate.min.css">
+    <style>
+      pre {
+        word-wrap: normal;
+        -moz-hyphens: none;
+        -ms-hyphens: none;
+        -webkit-hyphens: none;
+        hyphens: none;
+        font-size: 0.85em;
+        line-height: 1.4em;
+        padding-top: 0.5em;
+        padding-bottom: 0.5em;
+      }
+        pre code, pre tt {
+        white-space: pre;
+      }
+    </style>
+
+    <!-- =====================================================================
+    SEE Above / CUSTOM ELEMENTS
+    ========================================================================== -->
+
     {{!-- This tag outputs SEO meta+structured data and other important settings --}}
     {{ghost_head}}
 
@@ -75,6 +114,18 @@
     <script src="{{asset "main/js/breakpoints.min.js"}}"></script>
     <script src="{{asset "main/js/util.js"}}"></script>
     <script src="{{asset "main/js/main.js"}}"></script>
+
+    <!-- =====================================================================
+    SEE Below / CUSTOM ELEMENTS
+    ========================================================================== -->
+
+    <!--  Code Syntax (highlight) -->
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.13.1/highlight.min.js"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
+
+    <!-- =====================================================================
+    SEE Above / CUSTOM ELEMENTS
+    ========================================================================== -->
 
     {{!-- Ghost outputs important scripts & data with the {ghost_foot} tag
     it should always be the very last thing before the closing body tag --}}
